2010-10-22 Riccardo Mottola <rmottola@users.sf.net>

	* Source/DOMHTML.m
	Enable setting of ToolTips with the link url.

2010-10-03 Riccardo Mottola <rmottola@users.sf.net>

	*  Sources/DOMCore.h
	Enable renaming only if GCC has major version = 2

	* Sources/WebPlugin.h
	* Sources/WebPluginContainer.h
	Do not include Cocoa.h but directly Foundation and the necessary headers.

2010-08-03++  Nikolaus Schaller <hns@computer.org>
	* fixed some of the Issues reported on http://projects.goldelico.com/p/swk/issues/ (see commit messages)
	* worked on CSS parsing to be more complete for correct CSS files
	* worked on CSS stylesheet database search (match rules with nodes)
	* apply color: style
	* apply display: none

2010-08-03 Riccardo Mottola <rmottola@users.sf.net>

	* Sources/WebFrameView.m:
	Enable autohiding for GNUstep.
	
2010-05-20 00:07-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Palette/GNUmakefile:
	* Palette/GNUmakefile.preamble: Makefiles.
	* Palette/palette.table: Defines the classes to be imported.
	* Palette/SWKPalette.gorm: Interface file.
	* Palette/SWKPalette.[hm]: Implementation of the palette.
	* Palette/SWKPalette.tiff: Image.
	* Sources/WebView.m: Added an implementation of initWithCoder:.

2009-08-12++  Nikolaus Schaller <hns@computer.org>
	* Sources/NSXMLParser.m: fixed a problem with entities like &#9660;
	* Sources/WebDataSource.m
	  - fixed problem with committing when no response arrived (i.e. no network available)
		- fixed problem with relative and absolute URLs for subresources (did not notice that they are the same)
		- fixed problem where a completed subresource could call -finishedLoadingWithDataSource: twice (leading to load errors)
	* Sources/DOMCSS.*: added most CSS functionality
		- worked on class hierarchy to be more compatible to WebKit
		- parse CSS3 documents into DOM CSS tree (incl. correct handling and loading of @import)
		- parse <style> content and load and parse subresources <link rel="stylesheet">;