@@ -1,3 +1,8 @@
+2010-10-23  Nikolaus Schaller <hns@computer.org>
+	* fixed issue with <noframes> (which was counted as <frame> when determining the number of rows/columns of a <frameset>)
+	* fixed problem with processing CSS values as strings
+	* made a workaround for a problem in @import() CSS rules (needs to be fixed differently)
+
 2010-10-22 Riccardo Mottola <rmottola@users.sf.net>
 
 	* Source/DOMHTML.m
